--- a/pages/in-range/index.html
+++ b/pages/in-range/index.html
@@ -24,12 +24,12 @@
         border: 2px solid red;
       }
 
-      input:in-range + label::after {
-        content: "okay.";
+      input:in-range + span::after {
+        content: "Valoarea este ok.";
       }
 
-      input:out-of-range + label::after {
-        content: "out of range!";
+      input:out-of-range + span::after {
+        content: "Valoarea este in afara intervalului";
       }
     </style>
   </head>
@@ -41,16 +41,19 @@
           <p>Values between 1 and 10 are valid.</p>
           <ul>
             <li>
-              <input
-                id="value1"
-                name="value1"
-                type="number"
-                placeholder="1 to 10"
-                min="1"
-                max="10"
-                value="12"
-              />
-              <label for="value1">Your value is </label>
+              <label>
+                <span>Varsta</span>
+                <input
+                  id="value1"
+                  name="value1"
+                  type="number"
+                  placeholder="1 to 10"
+                  min="1"
+                  max="10"
+                  value="12"
+                />
+                <span for="value1"></span>
+              </label>
             </li>
           </ul>
         </form>
