--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
     <link rel="stylesheet" href="./styles/modern_normalize.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="./styles/main.css" />
-    <title>HTML/CSS Modulul 6 - Lectia 12</title>
+    <title>HTML/CSS Modulul 7 - Lectia 13</title>
   </head>
   <body class="primary-page">
     <main class="container">
       <h1 class="heading-primary">
-        HTML/CSS Modulul 6 - Lectia 12 - Validarea Formularului
+        HTML/CSS Modulul 7 - Lectia 13 - Metoda B.E.M.
       </h1>
       <ul class="answers-list">
         <li>
-          <span> Formatul de stare a elementului de formular</span>
-          <a href="./pages/form-state/index.html">Link</a>
+          <span>Metodologia B.E.M.</span>
+          <a href="./pages/bem/index.html">Link</a>
         </li>
         <li>
-          <span>Valid / Invalid</span>
-          <a href="./pages/validation-styling/index.html">Link</a>
+          <span>Block</span>
+          <a href="./pages/block/index.html">Link</a>
         </li>
         <li>
-          <span>In Range / Out of Range</span>
-          <a href="./pages/in-range/index.html">Link</a>
+          <span>Element</span>
+          <a href="./pages/element/index.html">Link</a>
         </li>
         <li>
-          <span>Checkbox</span>
-          <a href="./pages/custom-checkbox/index.html">Link</a>
+          <span>Modifier</span>
+          <a href="./pages/modifier/index.html">Link</a>
         </li>
         <li>
-          <span>Pseudoclasa :focus-within</span>
-          <a href="./pages/focus-within/index.html">Link</a>
+          <span>Mix</span>
+          <a href="./pages/mixins/index.html">Link</a>
         </li>
       </ul>
 
@@ -41,10 +41,18 @@
       <ul class="answers-list">
         <li>
           <a
-            href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation"
-            rel="noreferrer nofollow no"
+            href="https://www.toptal.com/css/introduction-to-bem-methodology"
+            rel="noreferrer nofollow"
           >
             Articol
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://en.bem.info/methodology/quick-start/"
+            rel="noreferrer nofollow"
+          >
+            Documentatie
           </a>
         </li>
         <li>
