--- a/intrebari.html
+++ b/intrebari.html
@@ -9,45 +9,9 @@
     <link rel="stylesheet" href="../../styles/main.css" />
 
     <title>Intrebari</title>
-    <style>
-      .pizza-input + .error {
-        display: none;
-      }
-
-      .pizza-input:invalid + .error {
-        display: inline-flex;
-      }
-    </style>
+    <style></style>
   </head>
   <body>
-    <main class="container example-page">
-      <form name="pizza-order">
-        <h2>Pizza</h2>
-        <label>
-          <span>Pizza</span>
-          <input
-            type="number"
-            name="pizza"
-            min="1"
-            max="12"
-            title="Prea multe pizza"
-          />
-        </label>
-        <label class="mt-lg">
-          <span>Pizza Pattern</span>
-          <input
-            class="pizza-input"
-            type="text"
-            name="pattern"
-            pattern="\b(0*(?:[1-9][0-9]?|100))\b"
-            title="Prea multe pizza"
-            required
-          />
-          <span class="error">Text Invalid</span>
-        </label>
-
-        <button type="submit">Submit</button>
-      </form>
-    </main>
+    <main class="container example-page"></main>
   </body>
 </html>
