--- a/test.html
+++ b/test.html
@@ -9,41 +9,10 @@
     <link rel="stylesheet" href="../../styles/main.css" />
     <link rel="stylesheet" href="../../styles/forms.css" />
 
-    <title>HTML/CSS Modulul 6 - Lectia 12</title>
-    <style>
-      form {
-        padding: 16px;
-        width: 500px;
-      }
-
-      form:focus-within {
-        border: 5px solid green;
-      }
-
-      form input:focus {
-        border: 5px solid red;
-      }
-
-      input {
-        outline: none;
-      }
-
-      input:focus ~ span {
-        border-color: blue;
-      }
-    </style>
+    <title>HTML/CSS Modulul 7 - Lectia 13</title>
+    <style></style>
   </head>
   <body>
-    <main class="container example-page">
-      <h1 class="heading-primary sticky">Proprietatea focus:within</h1>
-      <section class="lesson-example mt-lg">
-        <form>
-          <label>
-            Nume: <input name="firstName" type="text" />
-            <span>Test</span>
-          </label>
-        </form>
-      </section>
-    </main>
+    <main class="container example-page"></main>
   </body>
 </html>
